manifest/prod/website/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
  namespace: prod
spec:
  selector:
    app: website
  ports:
    - port: 443
      targetPort: 3000
