manifest/prod/website/ing-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ing
  namespace: prod
  labels:
    app.kubernetes.io/name: website-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: flotio.ovh
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website-svc
                port:
                  number: 443
  tls:
    - hosts:
        - flotio.ovh
      secretName: website-tls
